Fix : GameSession 버그 수정, 테스트 코드 수정